fixed spacing issues with projects

--- a/styles/scss/_global.scss
+++ b/styles/scss/_global.scss
@@ -30,23 +30,12 @@ a {
     text-decoration: none;
     color:$text-light;
 }
-p{
-    font-size: 1.5rem;
-}
+
 img {
     width: 100%;
 }
 
-h1{
-    font-family: "Sen", sans-serif;
-}
 
-h2{
-    font-size: 3rem;
-}
-h3{
-    font-size: 2.5rem;
-}
 
 
 
