--- a/styles/style.css
+++ b/styles/style.css
@@ -259,24 +259,8 @@ a {
   color: #eaf0db;
 }
 
-p {
-  font-size: 1.5rem;
-}
-
 img {
   width: 100%;
-}
-
-h1 {
-  font-family: "Sen", sans-serif;
-}
-
-h2 {
-  font-size: 3rem;
-}
-
-h3 {
-  font-size: 2.5rem;
 }
 
 .top-nav ul {
@@ -430,14 +414,27 @@ hr {
   font-size: 3rem;
 }
 
+.right-container, .left-container {
+  margin: 20px 0 20px 0;
+}
+
 .right-container .wrapper, .left-container .wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -ms-grid;
+  display: grid;
   position: relative;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-grid-columns: 55% 45%;
+      grid-template-columns: 55% 45%;
+}
+
+.left-container {
+  position: relative;
+}
+
+.left-container .wrapper {
+  padding: 60px 0 60px 0;
 }
 
 .right-container {
@@ -446,6 +443,7 @@ hr {
 
 .right-container .wrapper {
   color: #020E17;
+  padding: 40px 0 40px 0;
 }
 
 .right-container::before {
@@ -472,11 +470,45 @@ hr {
   -webkit-transform: skewY(4deg);
           transform: skewY(4deg);
   background: #eaf0db;
+  border-top: 30px solid #D0287F;
   border-bottom: 20px solid #D0287F;
 }
 
 .port-img-contain-right, .port-img-contain-left {
-  max-width: 465px;
+  max-width: 425px;
+}
+
+.contact-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 0;
+}
+
+.contact-container h2 {
+  text-transform: uppercase;
+}
+
+h1 {
+  font-family: "Sen", sans-serif;
+}
+
+h2 {
+  font-size: 3rem;
+}
+
+h3 {
+  font-size: 2.5rem;
+}
+
+p {
+  font-size: 1.5rem;
 }
 
 button {
@@ -505,133 +537,133 @@ button:hover {
 
 @-webkit-keyframes noise-anim {
   0% {
-    clip: rect(33px, 9999px, 13px, 0);
+    clip: rect(24px, 9999px, 71px, 0);
   }
   5% {
-    clip: rect(81px, 9999px, 75px, 0);
+    clip: rect(39px, 9999px, 63px, 0);
   }
   10% {
-    clip: rect(71px, 9999px, 73px, 0);
+    clip: rect(63px, 9999px, 87px, 0);
   }
   15% {
-    clip: rect(83px, 9999px, 95px, 0);
+    clip: rect(31px, 9999px, 42px, 0);
   }
   20% {
-    clip: rect(88px, 9999px, 44px, 0);
+    clip: rect(93px, 9999px, 45px, 0);
   }
   25% {
-    clip: rect(100px, 9999px, 68px, 0);
+    clip: rect(44px, 9999px, 20px, 0);
   }
   30% {
-    clip: rect(93px, 9999px, 21px, 0);
+    clip: rect(31px, 9999px, 38px, 0);
   }
   35% {
-    clip: rect(42px, 9999px, 99px, 0);
+    clip: rect(3px, 9999px, 4px, 0);
   }
   40% {
-    clip: rect(77px, 9999px, 42px, 0);
+    clip: rect(49px, 9999px, 87px, 0);
   }
   45% {
-    clip: rect(44px, 9999px, 17px, 0);
+    clip: rect(98px, 9999px, 23px, 0);
   }
   50% {
-    clip: rect(33px, 9999px, 23px, 0);
+    clip: rect(6px, 9999px, 8px, 0);
   }
   55% {
-    clip: rect(43px, 9999px, 31px, 0);
+    clip: rect(42px, 9999px, 78px, 0);
   }
   60% {
-    clip: rect(56px, 9999px, 23px, 0);
+    clip: rect(44px, 9999px, 86px, 0);
   }
   65% {
-    clip: rect(32px, 9999px, 98px, 0);
+    clip: rect(99px, 9999px, 63px, 0);
   }
   70% {
-    clip: rect(12px, 9999px, 36px, 0);
+    clip: rect(96px, 9999px, 83px, 0);
   }
   75% {
-    clip: rect(65px, 9999px, 36px, 0);
+    clip: rect(25px, 9999px, 78px, 0);
   }
   80% {
-    clip: rect(63px, 9999px, 33px, 0);
+    clip: rect(48px, 9999px, 19px, 0);
   }
   85% {
-    clip: rect(57px, 9999px, 12px, 0);
+    clip: rect(90px, 9999px, 37px, 0);
   }
   90% {
-    clip: rect(24px, 9999px, 32px, 0);
+    clip: rect(89px, 9999px, 63px, 0);
   }
   95% {
-    clip: rect(25px, 9999px, 27px, 0);
+    clip: rect(32px, 9999px, 95px, 0);
   }
   100% {
-    clip: rect(13px, 9999px, 1px, 0);
+    clip: rect(58px, 9999px, 33px, 0);
   }
 }
 
 @keyframes noise-anim {
   0% {
-    clip: rect(33px, 9999px, 13px, 0);
+    clip: rect(24px, 9999px, 71px, 0);
   }
   5% {
-    clip: rect(81px, 9999px, 75px, 0);
+    clip: rect(39px, 9999px, 63px, 0);
   }
   10% {
-    clip: rect(71px, 9999px, 73px, 0);
+    clip: rect(63px, 9999px, 87px, 0);
   }
   15% {
-    clip: rect(83px, 9999px, 95px, 0);
+    clip: rect(31px, 9999px, 42px, 0);
   }
   20% {
-    clip: rect(88px, 9999px, 44px, 0);
+    clip: rect(93px, 9999px, 45px, 0);
   }
   25% {
-    clip: rect(100px, 9999px, 68px, 0);
+    clip: rect(44px, 9999px, 20px, 0);
   }
   30% {
-    clip: rect(93px, 9999px, 21px, 0);
+    clip: rect(31px, 9999px, 38px, 0);
   }
   35% {
-    clip: rect(42px, 9999px, 99px, 0);
+    clip: rect(3px, 9999px, 4px, 0);
   }
   40% {
-    clip: rect(77px, 9999px, 42px, 0);
+    clip: rect(49px, 9999px, 87px, 0);
   }
   45% {
-    clip: rect(44px, 9999px, 17px, 0);
+    clip: rect(98px, 9999px, 23px, 0);
   }
   50% {
-    clip: rect(33px, 9999px, 23px, 0);
+    clip: rect(6px, 9999px, 8px, 0);
   }
   55% {
-    clip: rect(43px, 9999px, 31px, 0);
+    clip: rect(42px, 9999px, 78px, 0);
   }
   60% {
-    clip: rect(56px, 9999px, 23px, 0);
+    clip: rect(44px, 9999px, 86px, 0);
   }
   65% {
-    clip: rect(32px, 9999px, 98px, 0);
+    clip: rect(99px, 9999px, 63px, 0);
   }
   70% {
-    clip: rect(12px, 9999px, 36px, 0);
+    clip: rect(96px, 9999px, 83px, 0);
   }
   75% {
-    clip: rect(65px, 9999px, 36px, 0);
+    clip: rect(25px, 9999px, 78px, 0);
   }
   80% {
-    clip: rect(63px, 9999px, 33px, 0);
+    clip: rect(48px, 9999px, 19px, 0);
   }
   85% {
-    clip: rect(57px, 9999px, 12px, 0);
+    clip: rect(90px, 9999px, 37px, 0);
   }
   90% {
-    clip: rect(24px, 9999px, 32px, 0);
+    clip: rect(89px, 9999px, 63px, 0);
   }
   95% {
-    clip: rect(25px, 9999px, 27px, 0);
+    clip: rect(32px, 9999px, 95px, 0);
   }
   100% {
-    clip: rect(13px, 9999px, 1px, 0);
+    clip: rect(58px, 9999px, 33px, 0);
   }
 }
 
